--- a/index.html
+++ b/index.html
@@ -2,43 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel='stylesheet' href='css/style.css'/>
   <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <script src="https://kit.fontawesome.com/87f3722add.js" crossorigin="anonymous"></script>
+  <script src='script.js' defer></script>
 </head>
 <body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
+  <h1>SPLI<br />TTER</h1>
+  <main>
+    <section id='information'>
+      <div>
+        <label for='bill'>Bill</label>
+        <p class='error-message'>Choose an amount</p>
+        <div class="input-icon">
+          <i>$</i>
+          <input type='number' name='bill' id='bill'>
+        </div>
+      </div>
+      <div>
+        <p>Select Tip %</p>
+        <div id='tip'>
+            <input type="radio" name="tip" id='5' value='5'/><label for='5'>5%</label>
+            <input type="radio" name="tip" id='10' value='10'/><label for='10'>10%</label>
+            <input type="radio" name="tip" id='15' value='15'/><label for='15'>15%</label>
+            <input type="radio" name="tip" id='25' value='25'/><label for='25'>25%</label>
+            <input type="radio" name="tip" id='50' value='50'/><label for='50'>50%</label>
+            <input type="number" name='tip' id='custom' placeholder="Custom"/>
+          </div>
+        </div>
+      </div>
+      <div>
+        <label for="number">Number of People</label>
+        <p class='error-message'>Can't be zero</p>
+        <div class='input-icon'>
+          <i class="fas fa-user"></i>
+          <input type='number' name='number' id='number'/>
+        </div>
+      </div>
+    </section>
+    <section id='display'>
+      <div>
+        <p>Tip Amount <br /><span>/ person</span></p>
+        <p id='tip-amount-display'>$0.00</p>
+      </div>
+      <div>
+        <p>Total <br /><span>/ person</span></p>
+        <p id='total-display'>$0.00</p>
+      </div>
+      <button type='reset'>RESET</button>
+    </section>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Cerebrawl</a>.
   </div>
 </body>
 </html>
