--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p class='error-message'>Choose an amount</p>
         <div class="input-icon">
           <i>$</i>
-          <input type='number' name='bill' id='bill'>
+          <input type='number' name='bill' id='bill' placeholder="0">
         </div>
       </div>
       <div>
@@ -38,7 +38,7 @@
         <p class='error-message'>Can't be zero</p>
         <div class='input-icon'>
           <i class="fas fa-user"></i>
-          <input type='number' name='number' id='number'/>
+          <input type='number' name='number' id='number' placeholder="0"/>
         </div>
       </div>
     </section>
